[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://assets/gradients/zeronet_gradient_texture.tres" type="Texture" id=3]
[ext_resource path="res://assets/character/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/builder.gd" type="Script" id=5]
[ext_resource path="res://ui/fonts/modernpics.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/shaders/SS_GLOW.shader" type="Shader" id=7]
[ext_resource path="res://scripts/bloom.gd" type="Script" id=8]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=9]
[ext_resource path="res://ui/fonts/Cantarell-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://ui/buttons/build_tools/block_idle.png" type="Texture" id=11]
[ext_resource path="res://ui/buttons/build_tools/block_hover.png" type="Texture" id=12]
[ext_resource path="res://ui/buttons/build_tools/flag_idle.png" type="Texture" id=13]
[ext_resource path="res://ui/buttons/build_tools/flag_hover.png" type="Texture" id=14]
[ext_resource path="res://ui/buttons/build_tools/jump_pad_idle.png" type="Texture" id=15]
[ext_resource path="res://ui/buttons/build_tools/jump_pad_hover.png" type="Texture" id=16]
[ext_resource path="res://ui/buttons/build_tools/mine_idle.png" type="Texture" id=17]
[ext_resource path="res://ui/buttons/build_tools/mine_hover.png" type="Texture" id=18]
[ext_resource path="res://ui/buttons/build_tools/skull_idle.png" type="Texture" id=19]
[ext_resource path="res://ui/buttons/build_tools/skull_hover.png" type="Texture" id=20]
[ext_resource path="res://ui/logos/zn_purple.png" type="Texture" id=21]
[ext_resource path="res://ui/logos/zn_white.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=10]

size = 40
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=5]

radius = 1.5546

[sub_resource type="RectangleShape2D" id=4]


[sub_resource type="ShaderMaterial" id=6]

shader = ExtResource( 7 )
shader_param/hdr_threshold = 1.5
shader_param/bloom = 5.06

[sub_resource type="DynamicFont" id=7]

size = 12
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]

size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]

size = 24
font_data = ExtResource( 6 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, 0.853271 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 2 )

[node name="backgorund_gradient" type="Polygon2D" parent="Camera"]
position = Vector2( -147.754, -790.853 )
rotation = 0.919979
polygon = PoolVector2Array( -33.7595, 651.444, 793.134, -446.771, 1454.86, 45.3892, 607.131, 1157.09 )
texture = ExtResource( 3 )

[node name="character" parent="." instance=ExtResource( 4 )]

[node name="level" type="Node2D" parent="."]
position = Vector2( -711.742, 424.846 )
script = ExtResource( 5 )

[node name="SpawnPos" type="Position2D" parent="level"]
position = Vector2( 712.497, -516.184 )

[node name="Polygon2D" type="Label" parent="level/SpawnPos"]
margin_left = -11.3318
margin_top = -20.1455
margin_right = 16.6682
margin_bottom = 19.8545
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
text = "^"

[node name="delete" type="Area2D" parent="level"]
editor/display_folded = true
position = Vector2( 60, 340 )
collision_layer = 2
collision_mask = 1054

[node name="col" type="CollisionShape2D" parent="level/delete"]
shape = SubResource( 5 )

[node name="shape" type="Polygon2D" parent="level/delete"]
visible = false
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 )

[node name="2x2" type="StaticBody2D" parent="level" groups=[
"delete",
]]
editor/display_folded = true
position = Vector2( 700.177, -379.738 )
collision_layer = 3

[node name="shape" type="Polygon2D" parent="level/2x2"]
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 )

[node name="col" type="CollisionShape2D" parent="level/2x2"]
shape = SubResource( 4 )

[node name="2x3" type="StaticBody2D" parent="level" groups=[
"delete",
]]
editor/display_folded = true
position = Vector2( 720.135, -379.738 )
collision_layer = 3

[node name="shape" type="Polygon2D" parent="level/2x3"]
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 )

[node name="col" type="CollisionShape2D" parent="level/2x3"]
shape = SubResource( 4 )

[node name="bloom" type="ColorRect" parent="."]
material = SubResource( 6 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -667.901
margin_top = -432.261
margin_right = 729.099
margin_bottom = 412.739
rect_min_size = Vector2( 500, 500 )
mouse_filter = 2
script = ExtResource( 8 )

[node name="tween" type="Tween" parent="bloom"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ItemList" type="ColorRect" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_right = 70.0
rect_min_size = Vector2( 70, 0 )
theme = ExtResource( 9 )
color = Color( 0.211765, 0.137255, 0.301961, 0.462745 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ItemList"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 324.61 )
color = Color( 0, 0, 0, 0.239216 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ItemList"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_right = 71.0
margin_bottom = 316.31
rect_min_size = Vector2( 0, 316.31 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer"]
margin_right = 65.0
margin_bottom = 364.0
rect_min_size = Vector2( 65, 0 )
alignment = 1

[node name="Control3" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 12.47
rect_min_size = Vector2( 5.7, 12.47 )

[node name="Label3" type="Label" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 65.0
margin_bottom = 33.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 7 )
text = "Tools"
align = 1
uppercase = true

[node name="Control9" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 65.0
margin_bottom = 44.1
rect_min_size = Vector2( 5.7, 7.1 )

[node name="Block" type="TextureButton" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 75.68
rect_min_size = Vector2( 0, 27.68 )
hint_tooltip = "Base block"
theme = ExtResource( 9 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Control4" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 65.0
margin_bottom = 84.59
rect_min_size = Vector2( 5.7, 5.59 )

[node name="Finish" type="TextureButton" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 65.0
margin_bottom = 115.68
rect_min_size = Vector2( 0, 27.68 )
hint_tooltip = "Goal"
theme = ExtResource( 9 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="Control5" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 65.0
margin_bottom = 124.59
rect_min_size = Vector2( 5.7, 5.59 )

[node name="JumpPad" type="TextureButton" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 65.0
margin_bottom = 155.68
rect_min_size = Vector2( 0, 27.68 )
hint_tooltip = "Jump pad"
theme = ExtResource( 9 )
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="Control6" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 65.0
margin_bottom = 164.59
rect_min_size = Vector2( 5.7, 5.59 )

[node name="Mine" type="TextureButton" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 65.0
margin_bottom = 195.68
rect_min_size = Vector2( 0, 27.68 )
hint_tooltip = "Mine"
theme = ExtResource( 9 )
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="Control7" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 65.0
margin_bottom = 204.59
rect_min_size = Vector2( 5.7, 5.59 )

[node name="DeathArea" type="TextureButton" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 65.0
margin_bottom = 235.68
rect_min_size = Vector2( 0, 27.68 )
hint_tooltip = "Death zone"
theme = ExtResource( 9 )
texture_normal = ExtResource( 19 )
texture_hover = ExtResource( 20 )
expand = true
stretch_mode = 5

[node name="Control8" type="Control" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 239.0
margin_right = 65.0
margin_bottom = 244.59
rect_min_size = Vector2( 5.7, 5.59 )

[node name="coin" type="Button" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 65.0
margin_bottom = 284.0
hint_tooltip = "Coin"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "$"

[node name="Spawn" type="Button" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 65.0
margin_bottom = 324.0
hint_tooltip = "Player spawn point"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "+"

[node name="Reset" type="Button" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 65.0
margin_bottom = 364.0
hint_tooltip = "Reset level"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "R"

[node name="Control" type="Control" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 320.0
margin_right = 71.0
margin_bottom = 344.37
rect_min_size = Vector2( 0, 24.37 )

[node name="Label2" type="Label" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 348.0
margin_right = 71.0
margin_bottom = 365.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 7 )
text = "GAME"
align = 1
uppercase = true

[node name="CenterPlayer6" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 369.0
margin_right = 71.0
margin_bottom = 405.0
hint_tooltip = "Center Player"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "u"

[node name="Play" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 409.0
margin_right = 71.0
margin_bottom = 445.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = ">"

[node name="Upload" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 449.0
margin_right = 71.0
margin_bottom = 485.0
hint_tooltip = "Upload to ZeroNet"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "]"

[node name="Download" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 489.0
margin_right = 71.0
margin_bottom = 525.0
hint_tooltip = "Save"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "D"

[node name="Share" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 529.0
margin_right = 71.0
margin_bottom = 565.0
hint_tooltip = "Share"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "o"

[node name="Remove" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 569.0
margin_right = 71.0
margin_bottom = 605.0
hint_tooltip = "Delete from disk"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "X"

[node name="MapList" type="Button" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 609.0
margin_right = 71.0
margin_bottom = 645.0
hint_tooltip = "Map list"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "4"

[node name="ScrollContainer2" type="ScrollContainer" parent="CanvasLayer/ItemList/VBoxContainer"]
margin_top = 649.0
margin_right = 71.0
margin_bottom = 649.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ItemList/VBoxContainer/ScrollContainer2"]
alignment = 1

[node name="ZeroNetLogo" type="VBoxContainer" parent="CanvasLayer/ItemList"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -51.0
margin_right = 25.0

[node name="ZeroNet" type="TextureButton" parent="CanvasLayer/ItemList/ZeroNetLogo"]
margin_right = 50.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 21 )
texture_hover = ExtResource( 22 )
expand = true
stretch_mode = 5

[node name="Control2" type="Control" parent="CanvasLayer/ItemList/ZeroNetLogo"]
margin_top = 36.0
margin_right = 50.0
margin_bottom = 51.39
rect_min_size = Vector2( 5.7, 15.39 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ItemList"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
grow_vertical = 0
rect_min_size = Vector2( 0, 63.26 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ItemList/VBoxContainer2"]
margin_right = 70.0
margin_bottom = 24.0
grow_vertical = 0
mouse_filter = 2
alignment = 2

[node name="logged_in" type="Label" parent="CanvasLayer/ItemList/VBoxContainer2/HBoxContainer"]
margin_left = 41.0
margin_right = 61.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0.78, 0 )
hint_tooltip = "ZeroNet profile"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.894118, 0.945098, 0.443137, 1 )
text = "%"
align = 2

[node name="not_logged_in2" type="Label" parent="CanvasLayer/ItemList/VBoxContainer2/HBoxContainer"]
visible = false
margin_left = 23.0
margin_right = 42.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0.78, 0 )
hint_tooltip = "ZeroNet profile"
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0.470588, 0.00392157, 1 )
text = "!"
align = 2

[node name="Control" type="Control" parent="CanvasLayer/ItemList/VBoxContainer2/HBoxContainer"]
margin_left = 65.0
margin_right = 70.7
margin_bottom = 24.0
rect_min_size = Vector2( 5.7, 0 )

[connection signal="coin" from="character" to="bloom" method="_on_character_coin"]
[connection signal="death" from="character" to="." method="_on_character_death"]
[connection signal="death" from="character" to="bloom" method="_on_character_death"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer/Block" to="level" method="_on_Block_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer/JumpPad" to="level" method="_on_JumpPad_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer/Mine" to="level" method="_on_Mine_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer/coin" to="level" method="_on_coin_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/ScrollContainer/VBoxContainer/Reset" to="level" method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/VBoxContainer/CenterPlayer6" to="." method="_on_CenterPlayer6_pressed"]
